[package]
name = "lading-payload"
version = "0.1.0"
authors = [
  "Brian L. Troutwine <brian.troutwine@datadoghq.com>",
  "George Hahn <george.hahn@datadoghq.com",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
bytes = { workspace = true }
byte-unit = { workspace = true }
opentelemetry-proto = { version = "0.30.0", features = [
  "trace",
  "metrics",
  "logs",
  "gen-tonic",
  "with-serde",
] }
prost = { workspace = true }
rand = { workspace = true, features = [
  "small_rng",
  "std",
  "std_rng",
] }
rmp-serde = { version = "1.1", default-features = false }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_tuple = { version = "1.1", default-features = false }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting"] }
tracing = { workspace = true }
tokio = { workspace = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
criterion = { version = "0.6", features = ["html_reports"] }

[features]
default = []
fuzz = ["arbitrary"]

[lib]
doctest = false

[[bench]]
name = "default"
harness = false

[[bench]]
name = "opentelemetry_metric"
harness = false
