[package]
name = "lading-payload"
version = "0.1.0"
authors = [
  "Brian L. Troutwine <brian.troutwine@datadoghq.com>",
  "George Hahn <george.hahn@datadoghq.com",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
bytes = { workspace = true }
byte-unit = { workspace = true }
opentelemetry-proto = { workspace = true }
prost = { workspace = true }
rand = { workspace = true, features = ["small_rng", "std", "std_rng"] }
rmp-serde = { version = "1.3", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
serde_tuple = { version = "1.1", default-features = false }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting"] }
tracing = { workspace = true }
tokio = { workspace = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
enum_dispatch = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }

[features]
default = []
fuzz = ["arbitrary"]

[lib]
doctest = false

[[bench]]
name = "apache_common"
harness = false

[[bench]]
name = "ascii"
harness = false

[[bench]]
name = "block"
harness = false

[[bench]]
name = "datadog_logs"
harness = false

[[bench]]
name = "dogstatsd"
harness = false

[[bench]]
name = "fluent"
harness = false

[[bench]]
name = "json"
harness = false

[[bench]]
name = "opentelemetry_log"
harness = false

[[bench]]
name = "opentelemetry_metric"
harness = false

[[bench]]
name = "opentelemetry_traces"
harness = false

[[bench]]
name = "splunk_hec"
harness = false

[[bench]]
name = "syslog"
harness = false

[[bench]]
name = "trace_agent"
harness = false

[lints]
workspace = true
