[package]
name = "lading_rig"
version = "0.1.0"
edition = "2021"

[dependencies]
lading_common = { path = "../lading_common" }

governor = { version = "0.3", features = ["std", "jitter", "quanta"] }
tower = { version = "0.4", default-features = false, features = ["timeout", "limit", "load-shed"] }
metrics = { version = "0.17", default-features = false, features = ["std"] }
metrics-exporter-prometheus = { version = "0.6", default-features = false, features = ["tokio-exporter"] }
serde_yaml = "0.8"
serde_qs = "0.8.5"
rand = "0.8.4"
argh = "0.1"
futures = "0.3.19"
byte-unit = { version = "4.0", features = ["serde"] }
hyper = "0.14"
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = { version = "1.0", features = ["std"] }
tokio = { version = "1.14", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "process", "signal"] }
tokio-util = { version = "0.6.9", features = ["io"] }
once_cell = "1.8"
tracing = "0.1"
tracing-subscriber = "0.2"

[[bin]]
name = "rig"
