[package]
name = "lading-signal"
version = "0.1.0"
authors = [
  "Brian L. Troutwine <brian.troutwine@datadoghq.com>",
  "George Hahn <george.hahn@datadoghq.com",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "A tool for load testing daemons."

[dependencies]
tokio = { version = "1.47", features = ["rt", "sync", "time"] }
tracing = "0.1"
thiserror = "2.0"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint", "futures"] }

[lib]
doctest = false
