[package]
name = "lading-telemetry"
version = "0.1.0"
authors = ["Brian L. Troutwine <brian.troutwine@datadoghq.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/datadog/lading/"
keywords = ["random_test", "generator"]
categories = ["development-tools::profiling"]
description = "Telemetry mechanism for the lading project"

[dependencies]
prost = { version = "0.12" }
flatbuffers = { version = "24.3", default-features = false }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread", "macros", "io-util", "sync"] }
tracing = { workspace = true }

[build-dependencies]
prost-build = { version = "0.12" }

[lib]
doctest = false
