[package]
name = "ducks"
version = "0.1.0"
edition = "2024"
description = "The integration testing target for lading"
authors = ["Single Machine Performance Team"]
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
bytes = { workspace = true }
entropy = "0.4"
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true }
once_cell = { workspace = true }
shared = { path = "../shared" }
sketches-ddsketch = "0.3"
tokio = { workspace = true, features = [
  "rt",
  "macros",
  "fs",
  "io-util",
  "process",
  "signal",
  "time",
  "net",
] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true, default-features = false, features = [
  "transport",
  "router",
] }
tracing = { version = "0.1", features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
