[package]
name = "ducks"
version = "0.1.0"
edition = "2024"
description = "The integration testing target for lading"
authors = ["Single Machine Performance Team"]
license = "MIT"
publish = false

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
entropy = "0.4"
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["server"] }
hyper-util = { workspace = true }
once_cell = { workspace = true }
shared = { path = "../shared" }
ddsketch-agent = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "signal",
  "time",
] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, default-features = false, features = [
  "transport",
  "router",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
