[package]
name = "lading_proptest"
version = "0.1.0"
edition = "2024"
description = "Property-based integration testing for the Datadog Agent logs pipeline"
authors = ["Single Machine Performance Team"]
license = "MIT"
publish = false

[dependencies]
anyhow = { workspace = true }
bollard = { version = "0.19" }
bytes = { workspace = true }
flate2 = { version = "1.1.2" }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["http1", "server-auto", "tokio"] }
nix = { version = "0.30", default-features = false, features = ["signal"] }
proptest = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
zstd = { version = "0.13.3" }

[lints]
workspace = true
