[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Single Machine Performance Team"]
license = "MIT"
description = "Shared code for lading integration tests"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.9", default-features = false, features = ["codegen"] }
prost = "0.11"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.9"
