[package]
name = "shared"
version = "0.1.0"
edition = "2024"
authors = ["Single Machine Performance Team"]
license = "MIT"
description = "Shared code for lading integration tests"
publish = false

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]

[dependencies]
serde = { workspace = true }
tonic = { workspace = true, default-features = false, features = [
  "codegen",
  "transport",
  "router",
] }
tonic-prost = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
