[package]
name = "sheepdog"
version = "0.1.0"
edition = "2024"
description = "The integration test harness for lading"
authors = ["Single Machine Performance Team"]
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
escargot = "0.5.14"
shared = { path = "../shared" }
tempfile = "3.23"
tokio = { version = "1.47", features = [
  "rt",
  "macros",
  "fs",
  "io-util",
  "process",
  "signal",
  "time",
  "net",
] }
tonic = { workspace = true, default-features = false, features = [
  "transport",
] }
hyper-util = { workspace = true }
tower = { workspace = true, features = [
  "timeout",
  "limit",
  "load-shed",
  "util"
] }
tracing = { version = "0.1", features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
