[package]
name = "sheepdog"
version = "0.1.0"
edition = "2024"
description = "The integration test harness for lading"
authors = ["Single Machine Performance Team"]
license = "MIT"
publish = false

[dependencies]
anyhow = { workspace = true }
escargot = { version = "0.5.14" }
shared = { path = "../shared" }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "signal",
  "time",
] }
tonic = { workspace = true, default-features = false, features = ["transport"] }
hyper-util = { workspace = true }
tower = { workspace = true, features = [
  "limit",
  "load-shed",
  "timeout",
  "util",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
