[package]
name = "lading-payload-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
rand = { version = "0.9", default-features = false, features = [
  "small_rng",
  "std",
  "std_rng",
] }
lading-fuzz = { path = "../../lading_fuzz" }

[dependencies.lading-payload]
path = ".."
features = ["fuzz"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "dogstatsd_serializer_to_bytes"
path = "fuzz_targets/dogstatsd_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "opentelemetry_metrics_serializer_to_bytes"
path = "fuzz_targets/opentelemetry_metrics_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "opentelemetry_logs_serializer_to_bytes"
path = "fuzz_targets/opentelemetry_logs_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "apache_common_serializer_to_bytes"
path = "fuzz_targets/apache_common_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "ascii_serializer_to_bytes"
path = "fuzz_targets/ascii_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "json_serializer_to_bytes"
path = "fuzz_targets/json_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "fluent_serializer_to_bytes"
path = "fuzz_targets/fluent_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "datadog_log_serializer_to_bytes"
path = "fuzz_targets/datadog_log_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "syslog5424_serializer_to_bytes"
path = "fuzz_targets/syslog5424_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "trace_agent_v04_serializer_to_bytes"
path = "fuzz_targets/trace_agent_v04_serializer_to_bytes.rs"
test = false
doc = false

[[bin]]
name = "dogstatsd_cache_fixed_next_block"
path = "fuzz_targets/dogstatsd_cache_fixed_next_block.rs"
test = false
doc = false

[[bin]]
name = "opentelemetry_metrics_cache_fixed_next_block"
path = "fuzz_targets/opentelemetry_metrics_cache_fixed_next_block.rs"
test = false
doc = false

[[bin]]
name = "opentelemetry_logs_cache_fixed_next_block"
path = "fuzz_targets/opentelemetry_logs_cache_fixed_next_block.rs"
test = false
doc = false

[[bin]]
name = "apache_common_cache_fixed_next_block"
path = "fuzz_targets/apache_common_cache_fixed_next_block.rs"
test = false
doc = false

[[bin]]
name = "ascii_cache_fixed_next_block"
path = "fuzz_targets/ascii_cache_fixed_next_block.rs"
test = false
doc = false

[[bin]]
name = "json_cache_fixed_next_block"
path = "fuzz_targets/json_cache_fixed_next_block.rs"
test = false
doc = false

[[bin]]
name = "fluent_cache_fixed_next_block"
path = "fuzz_targets/fluent_cache_fixed_next_block.rs"
test = false
doc = false

[[bin]]
name = "datadog_log_cache_fixed_next_block"
path = "fuzz_targets/datadog_log_cache_fixed_next_block.rs"
test = false
doc = false

[[bin]]
name = "syslog5424_cache_fixed_next_block"
path = "fuzz_targets/syslog5424_cache_fixed_next_block.rs"
test = false
doc = false

[[bin]]
name = "trace_agent_v04_cache_fixed_next_block"
path = "fuzz_targets/trace_agent_v04_cache_fixed_next_block.rs"
test = false
doc = false
